# 12.RAG_against_the_machine

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/bm25_index/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  answer.py  config.py  errors.py  index.py  models.py  rag.py  search.py
