[project]
name = "12-rag-against-the-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25>=0.3.9",
    "fire>=0.7.1",
    "langchain-text-splitters>=1.1.2",
    "pathlib>=1.0.1",
    "pydantic>=2.13.4",
    "tqdm>=4.68.2",
]

[mypy]
ignore_missing_imports = true
